extends Control


func _on_Start_pressed():
	get_tree().change_scene("res://scenes/map/gameplay.tscn")
	pass # Replace with function body.


func _on_Options_pressed():
	pass # Replace with function body.


func _on_YT_pressed():
	pass # Replace with function body.


func _on_FB_pressed():
	pass # Replace with function body.
